tests/fsharp/typecheck/sigs/neg122.preview.bsl

neg122.fs(19,65,19,98): typecheck error FS0001: Method or object constructor 'ParseApply' not found
